--- a/.github/workflows/calculate-version.yml
+++ b/.github/workflows/calculate-version.yml
@@ -11,16 +11,20 @@ name: Calculate Version
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  verion:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
+    - name: Checkout repo
+      uses: actions/checkout@v2
+    - name: Setup Node.js
+      uses: actions/setup-node@v1
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-    - name: Semantic Release
-      uses: cycjimmy/semantic-release-action@v2
-      with:
-        extra_plugins: |
-          @semantic-release/git
-          @semantic-release/exec
-          @semantic-release/changelog
+        node-version: 13
+    - name: Add plugin for conventional commits
+      run: npm install conventional-changelog-conventionalcommits
+      working-directory: ./.github/workflows
+    - name: Release to GitHub
+      working-directory: ./.github/workflows
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: npx semantic-release
