GitHub actually uses a much older version

--- a/.github/workflows/calculate-version.yml
+++ b/.github/workflows/calculate-version.yml
@@ -18,6 +18,8 @@ jobs:
       uses: actions/checkout@v2
     - name: Setup Node.js
       uses: actions/setup-node@v1
+      with:
+        node-version: 14
     - name: Add plugin for conventional commits
       run: npm install conventional-changelog-conventionalcommits
       working-directory: ./.github/workflows
