--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -1,8 +1,7 @@
 on:
   push:
-    # Sequence of patterns matched against refs/tags
-    tags:
-    - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+    branches:
+    - 'main' # Push events to main
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -19,18 +18,25 @@ jobs:
     - uses: ncipollo/release-action@v1
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-    - name: Set env
-      run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+        
+    - name: Semantic Release
+      uses: cycjimmy/semantic-release-action@v2
+      id: semantic   # Need an `id` for output variables
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
     - name: Replace Version
       uses: jacobtomlinson/gha-find-replace@v2
       with:
         find: "SEMANTIC_VERSION_NUMBER"
-        replace: $GITHUB_ENV
+        replace: ${{ steps.semantic.outputs.new_release_version }}
+
     - name: Archive Release
       uses: thedoctor0/zip-release@master
       with:
         filename: 'GhostWriter.ext'
         exclusions: '*.git* *.github* *.resources* /*node_modules/* .editorconfig *.ext'
+
     - name: Create Release
       uses: ncipollo/release-action@v1
       with:
