--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -23,6 +23,7 @@ jobs:
       uses: cycjimmy/semantic-release-action@v2
       id: semantic   # Need an `id` for output variables
       with:
+        semantic_version: 16
         branches: [ 'main' ]
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
