--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -14,24 +14,25 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-
-    - name: Semantic Release
-      uses: cycjimmy/semantic-release-action@v2
-      id: semantic
+    - name: Checkout
+      uses: actions/checkout@v2
       with:
-        extra_plugins: |
-          @semantic-release/git
-          @semantic-release/changelog
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        fetch-depth: 0
+
+    - name: Install GitVersion
+      uses: gittools/actions/gitversion/setup@v0.9.7
+      with:
+        versionSpec: '5.x'
+
+    - name: Determine Version
+      id: semantic
+      uses: gittools/actions/gitversion/execute@v0.9.7
 
     - name: Replace Version
       uses: jacobtomlinson/gha-find-replace@v2
       with:
         find: "SEMANTIC_VERSION_NUMBER"
-        replace: ${{ steps.semantic.outputs.new_release_version }}
+        replace: "$GITVERSION_SEMVER"
 
     - name: Archive Release
       uses: thedoctor0/zip-release@master
