--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -34,15 +34,25 @@ jobs:
         find: "SEMANTIC_VERSION_NUMBER"
         replace: "$GITVERSION_SEMVER"
 
+    - name: Create Release
+        uses: actions/create-release@v1
+        with:
+          draft: false
+          prerelease: false
+          release_name: "$GITVERSION_SEMVER"
+          tag_name: "$GITVERSION_SEMVER"
+          body_path: CHANGELOG.md
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
     - name: Archive Release
       uses: thedoctor0/zip-release@master
       with:
         filename: 'GhostWriter.ext'
         exclusions: '*.git* *.github* *.resources* /*node_modules/* .editorconfig *.ext .releaserc'
 
-    - name: Create Release
-      uses: ncipollo/release-action@v1
+    - name: Push Release
+      uses: actions/upload-artifact@v2
       with:
-        artifacts: "GhostWriter.ext"
-        token: ${{ secrets.GITHUB_TOKEN }}
-        allowUpdates: true
+        name: 'GhostWriter.ext'
+        path: 'GhostWriter.ext'
