--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -19,14 +19,9 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Install GitVersion
-      uses: gittools/actions/gitversion/setup@v0.9.7
-      with:
-        versionSpec: '5.x'
-
     - name: Determine Version
       id: semantic
-      uses: gittools/actions/gitversion/execute@v0.9.7
+      uses: codacy/git-version@2.2.0
       with:
         prefix: 'v'
 
