--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -30,7 +30,7 @@ jobs:
       uses: jacobtomlinson/gha-find-replace@v2
       with:
         find: "SEMANTIC_VERSION_NUMBER"
-        replace: ${{ steps.semantic.output.version }}
+        replace: ${{ env.VERSION }}
 
     - name: Archive Release
       uses: thedoctor0/zip-release@master
@@ -42,6 +42,6 @@ jobs:
       uses: ncipollo/release-action@v1
       with:
         artifacts: "GhostWriter.ext"
-        tag: ${{ steps.semantic.output.version }}
+        tag: ${{ env.VERSION }}
         token: ${{ secrets.GITHUB_TOKEN }}
         allowUpdates: true
