--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -42,6 +42,6 @@ jobs:
       uses: ncipollo/release-action@v1
       with:
         artifacts: "GhostWriter.ext"
-        tag: ${{ env.VERSION }}
+        replace: ${{ steps.version.outputs.version }}
         token: ${{ secrets.GITHUB_TOKEN }}
         allowUpdates: true
