--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -21,13 +21,14 @@ jobs:
         token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Get Version
-      run: echo ::set-env name=RELEASE_VERSION::$(echo ${github.ref_name:1})
+      id: version
+      run: echo ::set-output name=version_number::$(echo ${github.ref_name:1})
 
     - name: Replace Version
       uses: jacobtomlinson/gha-find-replace@v2
       with:
         find: "SEMANTIC_VERSION_NUMBER"
-        replace: ${{env.RELEASE_VERSION}}
+        replace: ${{steps.version.output.version_number}}
 
     - name: Archive Release
       uses: thedoctor0/zip-release@master
