--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -21,7 +21,7 @@ jobs:
         token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Get Version
-      run: echo "RELEASE_VERSION=${github.ref_name:1}" >> GITHUB_ENV
+      run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/v}" >> GITHUB_ENV
 
     - name: Replace Version
       uses: jacobtomlinson/gha-find-replace@v2
