--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -20,14 +20,17 @@ jobs:
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Get Version
-      run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/v}" >> GITHUB_ENV
+    - uses: bhowell2/github-substring-action
+      id: version
+      with:
+        value: ${{github.ref_name}}
+        index_of_str: "v"
 
     - name: Replace Version
       uses: jacobtomlinson/gha-find-replace@v2
       with:
         find: "SEMANTIC_VERSION_NUMBER"
-        replace: ${{env.RELEASE_VERSION}}
+        replace: ${{steps.version.output.substring}}
 
     - name: Archive Release
       uses: thedoctor0/zip-release@master
